# interactions.work

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  check.sh  flutter_rust_bridge.yaml  interactions.work.sln  run.sh
.github/workflows/: ci.yml
.team/: config.yaml
.team/members/mail@woutersimons.com/: profile.yaml
.team/members/mail@woutersimons.com/kudos/: 697dd4ca8b7b9a.yaml
.team/members/wsimons@lionsville.nl/: credentials.yaml  profile.yaml
.team/team/interactions/: 19c13a1299b4d.yaml
docs/: TODO-ffi-integration.md  code-duplication-evaluation.md
flutter/: README.md  analysis_options.yaml  pubspec.yaml
flutter/lib/: app.dart  main.dart
flutter/lib/models/: credentials.dart  github_repository.dart  github_user.dart  models.dart  team.dart
flutter/lib/providers/: auth_provider.dart  interaction_provider.dart  repository_provider.dart  team_provider.dart
flutter/lib/screens/: give_feedback_screen.dart  give_kudos_screen.dart  home_screen.dart  interactions_screen.dart  login_screen.dart  repository_select_screen.dart  team_screen.dart  team_setup_screen.dart
flutter/lib/services/: auth_service.dart  github_service.dart
flutter/lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  models.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/test/: widget_test.dart
frontend.tests/: frontend.tests.csproj
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: auth.rs  error.rs  lib.rs
rust/core/src/models/: config.rs  interaction.rs  member.rs  mod.rs  okr.rs  team.rs
rust/core/src/storage/: mod.rs
rust/ffi/: Cargo.toml
rust/ffi/src/: api.rs  frb_generated.rs  lib.rs
rust/tui/: Cargo.toml
rust/tui/src/: app.rs  main.rs  ui.rs
