[workspace]
resolver = "2"
members = ["core", "tui", "ffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["interactions.work contributors"]
license = "MIT"
repository = "https://github.com/wouter1981/interactions.work"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Authentication
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# FFI bridge
flutter_rust_bridge = "=2.0.0"

# Testing
tempfile = "3"
