[package]
name = "interactions-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for interactions.work - personal and team development goals"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
